@@ -1,40 +1,79 @@
-# hermesComercial
-Configure Run VM Options: To run the application, you need to specify the module path and add the required modules in your run configuration:
-* Go to Run | Edit Configurations.
-* In the VM options field, add the following (adjust the path to your SDK):
-bash
---module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base
+# Hermes Comercial
 
+Este é um sistema de gestão comercial construído com JavaFX e Maven. Ele usa um banco de dados PostgreSQL e Flyway para migrações de banco de dados.
 
-o que um sistema comercial precisa ter para um loja comercial e salvar o resultado em uma arquivo pdf para fazer o download
+## Tecnologias Utilizadas
 
+*   Java 11
+*   JavaFX
+*   Maven
+*   PostgreSQL
+*   Flyway
+*   Log4j 2
+*   JUnit 5
 
+## Configuração do Banco de Dados
 
-Cadastro de Produtos
+1.  Certifique-se de que você tem o PostgreSQL instalado e em execução.
+2.  Crie um banco de dados chamado `hermescomercialdb`.
+3.  Atualize o arquivo `flyway.conf` com seu nome de usuário e senha do PostgreSQL.
+4.  Execute a migração do Flyway para criar o esquema do banco de dados e preenchê-lo com dados iniciais:
 
-Nome, código, descrição, preço, quantidade em estoque, categoria.
-Cadastro de Clientes
+    ```sh
+    mvn flyway:migrate
+    ```
 
-Nome, CPF/CNPJ, telefone, endereço, histórico de compras.
-Registro de Vendas
+## Como Executar
 
-Seleção de produtos, quantidade, preço, forma de pagamento, data e hora.
-Controle de Estoque
+1.  Compile o projeto usando o Maven:
 
-Atualização automática do estoque conforme vendas e entradas.
-Relatórios
+    ```sh
+    mvn clean install
+    ```
 
-Relatórios de vendas diárias, mensais, por produto, por cliente, etc.
-Geração de Documentos em PDF
+2.  Execute a aplicação:
 
-Recibos, notas fiscais, relatórios de vendas, extratos de cliente.
-Interface para Download de Arquivos PDF
+    ```sh
+    mvn javafx:run
+    ```
+3. Comando para o banco de dados
 
-Botão ou link para salvar localmente os arquivos gerados.
-Segurança e Backup
+3.1 Apagar as tabelas do banco de dados
+    '''
+    DROP SCHEMA public CASCADE;
+    CREATE SCHEMA public;
+    '''
 
-Controle de acesso, backups automáticos.
-Para salvar o resultado em PDF e permitir o download, o sistema deve contar com uma biblioteca ou ferramenta que converta os dados em PDF. Exemplos comuns:
+## Estrutura do Projeto
 
-Para sistemas web: bibliotecas como jsPDF, TCPDF, FPDF, dompdf.
-Para aplicações desktop: ferramentas específicas da linguagem usada (ex: iText para Java, ReportLab para Python).
+*   `src/main/java`: Contém o código-fonte Java da aplicação.
+    *   `com.br.hermescomercial.controller`: Contém os controladores JavaFX.
+    *   `com.br.hermescomercial.dao`: Contém os Data Access Objects (DAOs) para interação com o banco de dados.
+    *   `com.br.hermescomercial.model`: Contém as classes de modelo.
+    *   `com.br.hermescomercial.util`: Contém classes utilitárias.
+    *   `com.br.hermescomercial.connectionDB`: Contém a classe de conexão com o banco de dados.
+    *   `com.br.hermescomercial.Repository`: Contém as interfaces do repositório.
+*   `src/main/resources`: Contém os recursos da aplicação.
+    *   `css`: Contém as folhas de estilo CSS.
+    *   `db/migration`: Contém os scripts de migração de banco de dados do Flyway.
+    *   `img`: Contém as imagens usadas na aplicação.
+    *   `view`: Contém os arquivos FXML para a interface do usuário.
+*   `src/test/java`: Contém o código-fonte de teste.
+*   `pom.xml`: O arquivo de configuração do projeto Maven.
+*   `flyway.conf`: O arquivo de configuração do Flyway.
+
+## Testes
+
+Para executar os testes, execute o seguinte comando Maven:
+
+```sh
+mvn test
+```
+
+## Contribuição
+
+Pull requests são bem-vindos. Para alterações importantes, abra uma issue primeiro para discutir o que você gostaria de mudar.
+
+## Licença
+
+[MIT](https://choosealicense.com/licenses/mit/)
